# py-dts

./: .env.template  .gitignore  Dockerfile  License.md  README.md  main.py  pyproject.toml
design/: README.md
dts_api/api/route/: collection.py  document.py  navigation.py  root.py  router.py
dts_api/classes/: Adapter.py  Cache.py  ContentBuilder.py  ContentExtractor.py  Database.py  Designer.py  DtsResource.py  Error.py  Factory.py  FileStorage.py  Indexer.py  Operator.py  Pipeline.py  RepresentationBuilder.py  Service.py  Store.py  StoreKeeper.py  Utils.py
dts_api/custom/: CustomMetadataAdapter.py
dts_api/errors/: CustomError.py
dts_api/fakes/: fs.py
dts_api/funcs/: common.py  xml_tools.py
dts_api/model/: CollectionModel.py  Error.py  MetadataModel.py  NavigationModel.py  ParameterModel.py  RootModel.py  Validator.py  ViewModel.py
dts_api/service/: services.py
dts_api/settings/: settings.py
dts_api/template/: dts_tei_template.xml
dts_api/transform/html/: dts_wrapper.xsl  xml_to_html.xsl
dts_api/utils/: utils.py
tests/: fixture.py  test_e2e_collection.py  test_e2e_document.py  test_e2e_navigation.py
tests/dummy/: .env.github  .env.local
tests/dummy/local-storage-data/: README.md
tests/dummy/local-storage-data/database/: metadata.json
tests/dummy/local-storage-data/database/augustine/: augustine-confessions.xml
tests/dummy/local-storage-data/database/mp/: athous-iviron-450.xml  vat-gr-1190.xml
tests/dummy/local-storage-data/database/other/: short_document.xml
tests/dummy/local-storage-data/database/pta/: pta0001.pta001.pta-MsAb.xml
